a2a/0.3/modules/ROOT/pages/a2a-connector-reference.adoc
= A2A Connector 0.3.0-BETA Reference

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) provides A2A protocol support for LLM agents, enabling your agents to talk to other agents.

[NOTE]
====
Anypoint Connector for Agent2Agent (A2A) is a beta connector that is subject to the Beta Services Terms at https://www.salesforce.com/company/legal/agreements/[Agreements - Salesforce.com] or a written Unified Pilot Agreement if executed by Customer, and the Non-GA Gen AI and Non-GA Credit Consumption terms in the https://ptd.salesforce.com/?_ga=2.247987783.1372150065.1709219475-629000709.1639001992[Product Terms Directory]. Use of this beta connector with external systems or services consumes xref:general::usage-metrics.adoc[Mule messages] and is at the Customer's sole discretion. 
====

== Configurations

[[Client]]
=== Client

The application or AI system that initiates requests and consumes services offered by A2A servers. This allows Mule apps to act as A2A brokers between non A2A “head” agents and A2A “node” agents.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ClientConnection, Client Connection>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types

[[ClientConnection]]
===== Client Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server Url a| String |  Base URL of the target A2A server. |  | x
| Request Timeout a| Number | Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Request Timeout* field. |  SECONDS | 
| Authentication a| HttpRequestAuthentication |  |  | 
| Default Headers a| Object | Default headers. |  | 
| Tls Context a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===


---
[[Server]]
=== Server

The A2A server acts as a remote agent that exposes an HTTP(S) endpoint and implements the A2A protocol methods for interacting with other AI agents. This allows Mule-based agents to receive and respond to A2A protocol-compliant requests.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ServerConnection, Connection>> | The connection types to provide to this configuration. | | x
| Card a| <<AgentCard>> |  |  | x
| Name a| String | ID used to reference this configuration. |  | x
| Task History Enabled a| Boolean | Set to `true` to enable retrieval of task history. Task history is stored as message objects. |  false | 
| Default Max History Length a| Number | Maximum number of task history objects to store.  |  | 
| Task History Object Store a| ObjectStore |  |  | 
|===

==== Connection Types

[[ServerConnection]]
===== Server Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Listener Config a| String |  Reference to the `<http:listener-config>` used to expose the inbound endpoint. |  | x
| Agent Path a| String | URL where the Agent Card is located. |  | x
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===



[[CancelTask]]
== Cancel Task
`<a2a:cancel-task>`

Cancels the task specified by its unique identifier. It's used to stop a previously initiated task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id a| Any | Unique identifier for the task. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_ALREADY_COMPLETED 
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED 


[[GetCard]]
== Get Card
`<a2a:get-card>`

Gets the agent card.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Use Extended Card a| Boolean |  When true, fetches the authenticated extended agent card instead of the normal agent card. |  false | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INVALID_AGENT_CARD 
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED 
* A2A:UNAUTHORIZED 



[[GetTask]]
== Get Task
`<a2a:get-task>`

Retrieves information about a task based on a provided query. This enables you to fetch the status or details of a task from another agent.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Query a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_ALREADY_COMPLETED 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 


[[SendMessage]]
== Send Message
`<a2a:send-message>`

Sends a message.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Message a| Any | Message to send. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_ALREADY_COMPLETED 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 



[[SendTask]]
== Send Task
`<a2a:send-task>`

Sends a task to another agent. It initiates a new task request to a remote A2A server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_ALREADY_COMPLETED 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 


== Sources

[[TaskListener]]
== Task Listener
`<a2a:task-listener>`

Allows a Mule application to listen for and receive incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Response a| Any |  |  #[payload] | 
| Response Headers a| Object | HTTP response header.  |  | 
| Error Status Code a| Number | HTTP status code of the response. |  500 | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[ResponseAttributes]]
=== Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[AgentCard]]
=== Agent Card

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name for the agent. |  | x
| Url a| String | Base URL endpoint for the agent's A2A service. Must be an absolute HTTPS URL for production. |  | x
| Version a| String | Version for the agent. |  | x
| Description a| String | Description for the agent. |  | 
| Skills a| Array of <<AgentSkill>> |  |  | x
| Capabilities a| <<AgentCapabilities>> |  |  | 
| Provider a| <<AgentProvider>> |  |  | 
| Documentation Url a| String | URL of the agent's documentation.  |  | 
| Default Input Modes a| Array of String | Array of MIME types the agent accepts as input across all skills. |  | 
| Default Output Modes a| Array of String | Array of MIME types the agent produces as output across all skills.  |  | 
| Security a| Array of <<SecurityRequirement>> | Security. |  | 
| Security Schemes a| Array of one of:

* <<HttpSecurityScheme>>
* <<ApiKeySecurityScheme>>
* <<Oauth2SecurityScheme>>
* <<OpenIdConnectSecurityScheme>> | Security schemes. |  | 
| Icon Url a| String | URL of the agent's icon. |  | 
|===

[[AgentSkill]]
=== Agent Skill

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | Unique identifier for this skill within the context of this agent. |  | x
| Name a| String | Name of the skill. |  | x
| Description a| String | Description of what the skill does.  |  | 
| Tags a| Array of String | Keywords or categories for discoverability of the agent. |  | 
| Examples a| Array of String | Example prompts, inputs, or use cases. Examples help clients and agents formulate requests for this skill. |  | 
| Input Modes a| Array of String | Overrides Agent Card *Default Input Modes* for this specific skill. |  | 
| Output Modes a| Array of String | Overrides Agent Card *Default Output Modes* for this specific skill. |  | 
|===

[[AgentCapabilities]]
=== Agent Capabilities

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Streaming a| Boolean | Set to `true` to support SSE streaming methods. | false | 
| Push Notifications a| Boolean | Set to `true` to support push notification methods. | false | 
| State Transition History a| Boolean |  | false | 
| Extensions a| Array of <<AgentExtension>> | Extensions. |  | 
|===

[[AgentExtension]]
=== Agent Extension

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Uri a| String | URI of the extension. |  | x
| Description a| String | Description of the extension. |  | 
| Required a| Boolean | Whether the extension is required. | false | 
| Params a| Object | Parameters of the extension. |  | 
|===

[[AgentProvider]]
=== Agent Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Organization a| String | Name of the organization or entity. |  | x
| Url a| String | URL of the provider's website. |  | 
|===

[[SecurityRequirement]]
=== Security Requirement

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Security Scheme Name a| String | Name of the security scheme. |  | 
| Scopes a| Array of String | Scopes. |  | 
|===

[[RequestAttributes]]
=== Request Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Query Params a| Object |  |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Version a| String | HTTP version. |  | x
| Scheme a| String | HTTP scheme. |  | x
| Method a| String | HTTP method. |  | x
| Local Address a| String | Local address. |  | x
| Remote Address a| String | Remote address. |  | x
| Client Certificate a| <<CertificateData>> | Client certificate. |  | 
|===

[[CertificateData]]
=== Certificate Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Basic Constraints a| Number | Basic constraints extension value indicating if the certificate can be used to sign other certificates. |  | 
| Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of critical extensions in the certificate. |  | 
| Encoded a| Binary | The encoded form of the certificate. |  | 
| Extended Key Usage a| Array of String | Extended key usage extension indicating specific purposes for which the certificate public key can be used. |  | 
| Extensions a| Array of <<CertificateExtension>> | Certificate extensions providing additional information about the certificate. |  | 
| Issuer Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate issuer. |  | 
| Issuer DN a| <<PrincipalData>> | Distinguished name of the certificate issuer. |  | 
| Issuer Unique ID a| Array of Boolean | Unique identifier for the certificate issuer. |  | 
| Issuer X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate issuer. |  | 
| Key Usage a| Array of Boolean | Key usage extension indicating the purposes for which the certificate public key can be used. |  | 
| Name a| String | Name associated with the certificate. |  | 
| Non Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of non-critical extensions in the certificate. |  | 
| Not After a| Date | Expiration date of the certificate. |  | 
| Not Before a| Date | Date from which the certificate is valid. |  | 
| Public Key a| <<PublicKeyData>> | Public key information from the certificate. |  | 
| Serial Number a| Number | Serial number of the certificate. |  | 
| Serial Number Object a| <<SerialNumberData>> | Serial number object containing detailed serial number information. |  | 
| Sig Alg Name a| String | Name of the signature algorithm used to sign the certificate. |  | 
| Sig Alg OID a| String | Object identifier (OID) of the signature algorithm. |  | 
| Sig Alg Params a| Binary | Parameters for the signature algorithm. |  | 
| Signature a| Binary | Digital signature of the certificate. |  | 
| Subject Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate subject. |  | 
| Subject DN a| <<PrincipalData>> | Distinguished name of the certificate subject. |  | 
| Subject X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate subject. |  | 
| Type a| String | Type of the certificate. |  | 
| Version a| Number | Version number of the certificate format. |  | 
|===

[[CertificateExtension]]
=== Certificate Extension

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Criticality a| Boolean | Indicates whether the extension is critical. If `true`, the extension must be processed by the certificate user. |  | 
| Oid a| String | Object identifier (OID) that uniquely identifies the extension type. |  | 
| Value a| Binary | The extension value in its encoded form. |  | 
|===

[[AlternativeNameData]]
=== Alternative Name Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The alternative name value. |  | 
| Type a| Number | The type of alternative name. |  | 
|===

[[PrincipalData]]
=== Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Common Name a| String | The common name (CN) component of the distinguished name. |  | 
| Name a| String | The full distinguished name string representation. |  | 
|===

[[X500PrincipalData]]
=== X500 Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The X.500 distinguished name in string format. |  | 
|===

[[PublicKeyData]]
=== Public Key Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Algorithm a| String | The algorithm used for the public key (for example, RSA, DSA, EC). |  | 
| Encoded a| Binary | The encoded form of the public key. |  | 
| Modulus a| Number | The modulus value for RSA public keys. |  | 
| Params a| Number | Algorithm-specific parameters for the public key. |  | 
| Public Key a| String | The public key value in string representation. |  | 
|===

[[SerialNumberData]]
=== Serial Number Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Serial Number a| Number | The serial number value of the certificate. |  | 
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times to process a redelivered request unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  | 
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  | 
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===

[[HttpSecurityScheme]]
=== Http Security Scheme

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Scheme a| Enumeration, one of:

** BASIC
** BEARER
** DIGEST | HTTP security scheme type. |   | x
| Bearer Format a| String | Format of the bearer token. |  | 
| Security Scheme Name a| String | Name of the security scheme. |  | x
| Description a| String | Description of the security scheme. |  | 
|===

[[ApiKeySecurityScheme]]
=== Api Key Security Scheme

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name of the API key. |  | x
| In a| Enumeration, one of:

** QUERY
** HEADER
** COOKIE | API key location. |  |  | x
| Security Scheme Name a| String | Name of the security scheme. |  | x
| Description a| String | Description of the security scheme. |  | 
|===

[[Oauth2SecurityScheme]]
=== Oauth2 Security Scheme

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Flows a| <<Oauth2Flows>> | Oauth2 flows. |  | x
| Security Scheme Name a| String | Name of the security scheme. |  | x
| Description a| String | Description of the security scheme. |  | 
|===

[[Oauth2Flows]]
=== Oauth2 Flows

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Implicit a| <<ImplicitOauth2Flows>> | Implicit OAuth2 flow. |  | 
| Password a| <<PasswordOauth2Flows>> | Password OAuth2 flow. |  | 
| Client Credentials a| <<ClientCredentialsOauth2Flows>> | Client credentials OAuth2 flow. |  | 
| Authorization Code a| <<AuthorizationCodeOauth2Flows>> | Authorization code OAuth2 flow. |  | 
|===

[[ImplicitOauth2Flows]]
=== Implicit Oauth2 Flows

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Authorization Url a| String | Authorization URL. |  | x
| Refresh Url a| String | Refresh URL. |  | 
| Oauth2 Scopes a| Array of <<Oauth2Scope>> | OAuth2 scopes. |  | 
|===

[[Oauth2Scope]]
=== Oauth2 Scope

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name of the OAuth2 scope. |  | x
| Description a| String | Description of the OAuth2 scope. |  | x
|===

[[PasswordOauth2Flows]]
=== Password Oauth2 Flows

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Token Url a| String | Token URL. |  | x
| Refresh Url a| String | Refresh URL. |  | 
| Oauth2 Scopes a| Array of <<Oauth2Scope>> | OAuth2 scopes. |  | 
|===

[[ClientCredentialsOauth2Flows]]
=== Client Credentials Oauth2 Flows

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Token Url a| String | Token URL. |  | x
| Refresh Url a| String | Refresh URL. |  | 
| Oauth2 Scopes a| Array of <<Oauth2Scope>> | OAuth2 scopes. |  | 
|===

[[AuthorizationCodeOauth2Flows]]
=== Authorization Code Oauth2 Flows

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Authorization Url a| String | Authorization URL. |  | x
| Token Url a| String | Token URL. |  | x
| Refresh Url a| String | Refresh URL. |  | 
| Oauth2 Scopes a| Array of <<Oauth2Scope>> | OAuth2 scopes. |  | 
|===

[[OpenIdConnectSecurityScheme]]
=== Open Id Connect Security Scheme

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Open Id Connect Url a| String | Open ID Connect URL. |  | x
| Security Scheme Name a| String | Name of the security scheme. |  | x
| Description a| String | Description of the security scheme. |  | 
|===

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[A2A Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]